# eframe_template

./: .typos.toml  Cargo.toml  README.md  bacon.toml  build.rs  build.sh  build_web.bat  build_web.sh  check.sh  create_ipa  eframe_template-90707d3299557f3e.js  eframe_template-90707d3299557f3e_bg.wasm  eframe_template-d416970bc84bc1c4.js  eframe_template-d416970bc84bc1c4_bg.wasm  eframe_template-e6227b174cd7b97e.js  eframe_template-e6227b174cd7b97e_bg.wasm  eframe_template.js  eframe_template_bg.wasm  fill_template.ps1  fill_template.sh  flake.nix  index.html  ios-cargo  lychee.toml  rust-toolchain  setup_web.bat  setup_web.sh  start_server.bat  start_server.sh  wasm_bindgen_check.sh
.cargo/: config.toml
.github/workflows/: links.yml  pages.yml  rust.yml
android/: Cargo.toml  Makefile  README.md  manifest.yaml
android/kotlin/: MainActivity.kt
android/src/: lib.rs
assets/: manifest.json  sw.js
docs/: README.md  eframe_template.js  eframe_template_bg.wasm  eframe_template_lib.js  eframe_template_lib_bg.wasm  egui_template.js  egui_template_bg.wasm  index.html  manifest.json  sw.js
kotlin/: MainActivity.kt
src/: app.rs  lib.rs  main.rs  order_table.rs
